--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="new_login">New login</string>
+    <string name="add_shoe">Add shoe</string>
+    <string name="instructions">Instructions</string>
+    <string name="shoe_details">Shoe Details</string>
+    <string name="list_of_shoes">List of Shoes</string>
+    <string name="welcome">Welcome</string>
 </resources>
